# mp3encode

./: README.md  build.sh
app/: CMakeLists.txt  common.h  encoder.cpp  encoder.h  encoding_job.cpp  encoding_job.h  mp3encode.cpp  thread_safe_queue.h  wave_file_reader.cpp  wave_file_reader.h
vc_solution/: mp3encode.sln  mp3encode.vcxproj
